Devhub: Fix invisible text for dark-mode chart labels

--- a/src/devhub/style.css
+++ b/src/devhub/style.css
@@ -127,6 +127,7 @@ td {
     }
 
     #charts {
+        color: black;
         filter: invert(100%);
     }
 }
